--- a/Shayri-club/package.json
+++ b/Shayri-club/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shoelace-style/shoelace": "^2.20.1",
     "axios": "^1.11.0",
+    "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.0"
+    "react-feather": "^2.0.10",
+    "react-router-dom": "^7.8.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
