--- a/Shayri-club/package.json
+++ b/Shayri-club/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.562.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
