--- a/Shayri-club/package.json
+++ b/Shayri-club/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
